fixed certain issues

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,10 +8,10 @@ import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout title="">
-  <Container>
-    <LogoBanner />
-    <Features />
-    <Instagramwidget />
-    <Cta />
-  </Container>
+    <Container class="p-24">
+        <LogoBanner />
+        <Features />
+        <Instagramwidget />
+        <Cta />
+    </Container>
 </Layout>
