--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,64 +7,61 @@ import "@fontsource-variable/bricolage-grotesque";
 import "../styles/global.css";
 
 export interface Props {
-  title: string;
+    title: string;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site).toString();
 
 const resolvedImageWithDomain = new URL(
-  "/opengraph.jpg",
-  Astro.site
+    "/opengraph.jpg",
+    Astro.site
 ).toString();
 
 const { title } = Astro.props;
 
 const makeTitle = title
-  ? title + " | " + "Astroship"
-  : "Astroship - Starter Template for Astro with Tailwind CSS";
+    ? title + " | " + "ambientesconarte"
+    : "Papeles pintados personalizados de Ambientes con Arte";
 ---
 
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <meta name="generator" content={Astro.generator} />
 
-    <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
-    <SEO
-      title={makeTitle}
-      description="Astroship is a starter website template for Astro built with TailwindCSS."
-      canonical={canonicalURL}
-      twitter={{
-        creator: "@surjithctly",
-        site: "@web3templates",
-        card: "summary_large_image",
-      }}
-      openGraph={{
-        basic: {
-          url: canonicalURL,
-          type: "website",
-          title: `Astroship - Starter Template for Astro`,
-          image: resolvedImageWithDomain,
-        },
-        image: {
-          alt: "Astroship Homepage Screenshot",
-        },
-      }}
-    />
-  </head>
-  <body>
-    <Navbar class="sticky top-0 z-50 bg-white shadow" />
-    <slot />
-    <Footer />
-    <style is:global>
-      /* Improve Page speed */
-      /* https://css-tricks.com/almanac/properties/c/content-visibility/ */
-      img {
-        content-visibility: auto;
-      }
-    </style>
-  </body>
+        <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
+        <SEO
+            title={makeTitle}
+            description="Papeles pintados personalizados para decorar tu hogar y oficina. Diseños únicos y calidad premium en Ambientes con Arte."
+            canonical={canonicalURL}
+            openGraph={{
+                basic: {
+                    url: canonicalURL,
+                    type: "website",
+                    title:
+                        makeTitle ||
+                        "Ambientes con Arte - Papeles Pintados Personalizados",
+                    image: resolvedImageWithDomain,
+                },
+                image: {
+                    alt: "Papeles pintados personalizados de Ambientes con Arte",
+                },
+            }}
+        />
+    </head>
+    <body>
+        <Navbar class="top-0 z-50 bg-white shadow" />
+        <slot />
+        <Footer />
+        <style is:global>
+            /* Improve Page speed */
+            /* https://css-tricks.com/almanac/properties/c/content-visibility/ */
+            img {
+                content-visibility: auto;
+            }
+        </style>
+    </body>
 </html>
