--- a/src/pages/catalogo.astro
+++ b/src/pages/catalogo.astro
@@ -28,7 +28,7 @@ import Layout from "@/layouts/Layout.astro";
         </div>
         <div class="flex items-center justify-center mt-6">
             <a
-                href="https://cdn.tuweb.com/catalogo.pdf"
+                href="/public/downloads/Catalogo Residencial-2025_ESop.pdf"
                 download
                 class="inline-block px-6 py-3 bg-black text-white rounded-md hover:bg-gray-500 transition"
                 aria-label="Descargar catálogo PDF"
