added pdf catalog for download

--- a/src/pages/catalogo.astro
+++ b/src/pages/catalogo.astro
@@ -13,9 +13,7 @@ import Layout from "@/layouts/Layout.astro";
             >
         </Sectionhead>
         <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
-            <div
-                style="position:relative;padding-top:0;width:900px;height:500px;"
-            >
+            <div class="relative w-[900px] h-[500px] pt-0">
                 <iframe
                     style="position:absolute;border:none;width:100%;height:100%;left:0;top:0;"
                     src="https://online.fliphtml5.com/ghblx/scez/"
@@ -28,7 +26,7 @@ import Layout from "@/layouts/Layout.astro";
         </div>
         <div class="flex items-center justify-center mt-6">
             <a
-                href="/public/downloads/Catalogo Residencial-2025_ESop.pdf"
+                href="/public/downloads/catalogo.pdf"
                 download
                 class="inline-block px-6 py-3 bg-black text-white rounded-md hover:bg-gray-500 transition"
                 aria-label="Descargar catálogo PDF"
