--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -30,7 +30,7 @@ import { Icon } from "astro-icon/components";
                 </div>
                 <div class="flex items-center mt-2 space-x-2 text-gray-600">
                     <Icon class="text-gray-400 w-4 h-4" name="uil:phone" />
-                    <a href="tel:+34123456789">+34 123 456 789</a>
+                    <a href="tel:+34614509052">+34 614 50 90 52</a>
                 </div>
             </div>
         </div>
