catalog on mobile

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -30,7 +30,7 @@ const menuitems = [
 </style>
 <Container>
     <StickyHeader
-        class="sticky-navbar top-0 z-20 flex flex-col lg:flex-row justify-between items-center border-b transition-all p-2"
+        class="sticky-navbar top-0 z-20 flex flex-col lg:flex-row justify-between items-center border-b transition-all p-8 lg:p-2"
         scrollY={20}
         defaultClass="py-5 bg-white/80 border-transparent"
         activeClass="py-2 bg-white/80 border-gray-200 backdrop-blur-lg"
