--- a/src/pages/catalogo.astro
+++ b/src/pages/catalogo.astro
@@ -12,17 +12,15 @@ import Layout from "@/layouts/Layout.astro";
                 >La gran mayoría de nuestros diseños están aquí.</Fragment
             >
         </Sectionhead>
-        <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
-            <div class="relative w-[900px] h-[500px] pt-0">
-                <iframe
-                    style="position:absolute;border:none;width:100%;height:100%;left:0;top:0;"
-                    src="https://online.fliphtml5.com/ghblx/scez/"
-                    seamless="seamless"
-                    scrolling="no"
-                    frameborder="0"
-                    allowtransparency="true"
-                    allowfullscreen="true"></iframe>
-            </div>
+        <div class="relative pt-0 w-full h-[400px] lg:h-[800px]">
+            <iframe
+                class="absolute top-0 left-0 w-full h-full border-0"
+                src="https://online.fliphtml5.com/ghblx/scez/"
+                seamless="seamless"
+                scrolling="no"
+                frameborder="0"
+                allowtransparency="true"
+                allowfullscreen="true"></iframe>
         </div>
         <div class="flex items-center justify-center mt-6">
             <a
@@ -34,5 +32,5 @@ import Layout from "@/layouts/Layout.astro";
                 Descargar Catálogo
             </a>
         </div>
-    </Container></Layout
->
+    </Container>
+</Layout>
