--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -11,8 +11,8 @@ const menuitems = [
         icon: "bx:bxs-book",
     },
     {
-        title: "+34 123 456 789",
-        path: "tel:+34123456789",
+        title: "+34 614 50 90 52",
+        path: "tel:+34614509052",
         icon: "bx:bxs-phone",
     },
 ];
