--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -5,7 +5,7 @@
     <p class="text-center text-sm text-slate-500">GRUPO DON PEDRO DISEÑO, SL</p>
     <p class="text-center text-sm text-slate-500">B75991760</p>
     <p class="text-center font-bold text-sm text-slate-500">
-        <a href="+34614509052" class="text-blue-600 hover:underline">
+        <a href="tel:+34614509052" class="text-blue-600 hover:underline">
             +34 614 50 90 52
         </a>
     </p>
