--- a/src/pages/catalogo.astro
+++ b/src/pages/catalogo.astro
@@ -4,7 +4,7 @@ import Sectionhead from "@/components/sectionhead.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="Contact">
+<Layout title="Catalogo">
     <Container class="p-24">
         <Sectionhead>
             <Fragment slot="title">Catalogo</Fragment>
