added facebook pixel

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -97,15 +97,18 @@ const makeTitle = title
                 "script",
                 "https://connect.facebook.net/en_US/fbevents.js"
             );
-            fbq("init", "2215622468879568");
+            fbq("init", "757625850039320");
             fbq("track", "PageView");
-        </script><noscript>
-            <img
+        </script>
+        <noscript
+            ><img
                 height="1"
                 width="1"
-                src="https://www.facebook.com/tr?id=2215622468879568&ev=PageView&noscript=1"
+                style="display:none"
+                src="https://www.facebook.com/tr?id=757625850039320&ev=PageView&noscript=1"
             /></noscript
-        ><!-- End Meta Pixel Code -->
+        >
+        <!-- End Meta Pixel Code -->
     </head>
     <body>
         <!-- Google Tag Manager (noscript) -->
