added whatsapp button

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,7 @@ import Navbar from "@/components/navbar/navbar.astro";
 import "@fontsource-variable/inter/index.css";
 import "@fontsource-variable/bricolage-grotesque";
 import "../styles/global.css";
+import WhatsappButton from "@/components/whastappbutton.astro";
 
 export interface Props {
     title: string;
@@ -122,6 +123,8 @@ const makeTitle = title
         <!-- End Google Tag Manager (noscript) -->
         <Navbar class="top-0 z-50 bg-white shadow" />
         <slot />
+        <WhatsappButton />
+
         <Footer />
         <style is:global>
             /* Improve Page speed */
@@ -132,5 +135,3 @@ const makeTitle = title
         </style>
     </body>
 </html>
-
-https://wa.me/1+34614509052
