--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -7,8 +7,9 @@ import { Icon } from "astro-icon/components";
 const menuitems = [
     {
         title: "Catalogo",
-        path: "/catalogo",
+        path: "/public/downloads/catalogo.pdf",
         icon: "bx:bxs-book",
+        target: "_blank",
     },
     {
         title: "+34 614 50 90 52",
@@ -59,6 +60,9 @@ const menuitems = [
                                         <a
                                             href={item.path}
                                             class="flex lg:px-3 py-2 items-center text-gray-600 hover:text-gray-900"
+                                            {...(item.target
+                                                ? { target: item.target }
+                                                : {})}
                                         >
                                             <span class="flex items-center gap-2">
                                                 <div class="mt-1 bg-black rounded-full  p-2 w-8 h-8 shrink-0">
