Changed how to download catalog

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -7,7 +7,7 @@ import { Icon } from "astro-icon/components";
 const menuitems = [
     {
         title: "Catalogo",
-        path: "/public/downloads/catalogo.pdf",
+        path: "downloads/catalogo.pdf",
         icon: "bx:bxs-book",
         target: "_blank",
     },
